sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: an expression of type Null is ineligible for implicit conversion
  var aMixe:Boolean = null
                      ^AlgCombSort:5: error: type mismatch;
 found   : Null(null)
 required: Boolean
  var aMixe:Boolean = null
                      ^